# BIO

./: README.md  fpeditor_setup.py  requirements.txt
examples/: 02.wsq
fpeditor/: ApplicationWindow.py  BiometricsLib.py  CustomDialog.py  DialogUtil.py  FiltersUtil.py  ImgEditor.py  ImgObj.py  PixBufUtil.py  RotationUtil.py  ZoomUtil.py
fpeditor/assets/: custom.css
fpeditor/biometrics/: BiometricsLib.py
fpeditor/fpie/: FingerprintIELib.py  GaborUtil.py  Utils.py  WahabUtil.py
lib/biometrics/: README  crossing_number.py  frequency.py  gabor.py  poincare.py  thining.py  utils.py
lib/wsq/: CMakeLists.txt  wsq.cpp
lib/wsq/include/: wsq.h
lib/wsq/wsq/: decoder.c
